...
        android:id="@+id/image_step_detail_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_media_player"/>

    <TextView
        android:id="@+id/text_recipe_step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_step_detail_thumbnail"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_marginStart="@dimen/dimen_5_dp"
        android:layout_marginEnd="@dimen/dimen_5_dp"
        android:gravity="center"
        android:textSize="@dimen/dimen_16_sp"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/dimen_10_dp"
...
