...
            android:text="@string/steps"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_10_dp"
            android:textSize="@dimen/dimen_18_sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10_dp"/>

    </LinearLayout>

...
